# paraview-mcp-server

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bridge/: __init__.py  command_handler.py  execution.py  gui_bridge.py  models.py  server.py
docs/: architecture.md  python-execute-design.md
scripts/: paraview_bridge_request.py  start_paraview_bridge.py  start_paraview_gui_bridge.py
src/paraview_mcp_server/: __init__.py  headless.py  launcher.py  server.py
tests/: test_bridge_server.py  test_command_handler.py  test_gui_bridge.py  test_launcher.py  test_protocol.py  test_server.py
